Cleanup code according to codestyle
Fixed indents
Removed unnecessary symbols
Fix imports